Modificación en lógica de citas
